Stop ratings overlapping titles in touch UI
Closes #30

--- a/public/css/sass/mobile.sass
+++ b/public/css/sass/mobile.sass
@@ -205,10 +205,8 @@ a
       color: #666
 
     .rate
-      position: absolute
-      top: 0
-      right: 0
-      padding: 20px
+      float: right
+      margin-left: 20px
 
       span:before
         font-size: 30px
